influx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: influx
  name: influx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: influx
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/kube-grafana-default: "true"
        io.kompose.service: influx
    spec:
      containers:
        - env:
            - name: INFLUXDB_DB
              value: telegraf
            - name: INFLUXDB_USER
              value: telegraf
            - name: INFLUXDB_USER_PASSWORD
              value: iijineeZ9iet
          image: influxdb
          name: influx
          ports:
            - containerPort: 8086
          resources: {}
      restartPolicy: Always
status: {}
