kube-grafana-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: kube-grafana-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kube-grafana-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kube-grafana-default: "true"
